Run `make updatepo`

--- a/man/C/po/dpkg-architecture.1.pot
+++ b/man/C/po/dpkg-architecture.1.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-02-28  1:40+0200\n"
+"POT-Creation-Date: 2006-05-11 23:08-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,7 +23,7 @@ msgstr ""
 # type: TH
 #: dpkg-architecture.1:1
 #, no-wrap
-msgid "2006-02-28"
+msgid "2006-05-04"
 msgstr ""
 
 # type: TH
@@ -35,7 +35,7 @@ msgstr ""
 # type: TH
 #: dpkg-architecture.1:1
 #, no-wrap
-msgid "dpkg utililties"
+msgid "dpkg utilities"
 msgstr ""
 
 # type: SH
@@ -165,7 +165,7 @@ msgstr ""
 #: dpkg-architecture.1:49
 msgid ""
 "Check for equality between two Debian Architectures, by default it will "
-"compare against the currect Debian Architecture, being it the host."
+"compare against the current Debian Architecture, being it the host."
 msgstr ""
 
 # type: TP
