--- a/man/C/po/install-info.8.pot
+++ b/man/C/po/install-info.8.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-02-28  1:40+0200\n"
+"POT-Creation-Date: 2006-05-11 23:08-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15,39 +15,27 @@ msgstr ""
 "Content-Transfer-Encoding: ENCODING\n"
 
 # type: TH
-#.  Install-info and this manpage are Copyright 1994 by Ian Jackson.
-#.  This is free software; see the GNU General Public Licence version 2
-#.  or later for copying conditions.  There is NO warranty.
 #: install-info.8:5
 #, no-wrap
 msgid "install-info"
 msgstr ""
 
 # type: TH
-#.  Install-info and this manpage are Copyright 1994 by Ian Jackson.
-#.  This is free software; see the GNU General Public Licence version 2
-#.  or later for copying conditions.  There is NO warranty.
 #: install-info.8:5
 #, no-wrap
-msgid "2006-02-28  "
+msgid "2006-02-28"
 msgstr ""
 
 # type: TH
-#.  Install-info and this manpage are Copyright 1994 by Ian Jackson.
-#.  This is free software; see the GNU General Public Licence version 2
-#.  or later for copying conditions.  There is NO warranty.
 #: install-info.8:5
 #, no-wrap
-msgid "Debian"
+msgid "Debian Project"
 msgstr ""
 
 # type: TH
-#.  Install-info and this manpage are Copyright 1994 by Ian Jackson.
-#.  This is free software; see the GNU General Public Licence version 2
-#.  or later for copying conditions.  There is NO warranty.
 #: install-info.8:5
 #, no-wrap
-msgid "Project\""
+msgid "dpkg utilities"
 msgstr ""
 
 # type: SH
