--- a/man/pl/dpkg.cfg.5.pl.po
+++ b/man/pl/dpkg.cfg.5.pl.po
@@ -2,15 +2,16 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr "Project-Id-Version: dpkg 1.13.16\n"
+msgstr ""
+"Project-Id-Version: dpkg 1.13.16\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
 "PO-Revision-Date: 2006-03-02 00:08+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"Content-Type: text/plain; charset=ISO-8859-2\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 # type: TH
 #: dpkg.cfg.5:1
@@ -107,4 +108,3 @@ msgstr "ZOBACZ TAK¯E"
 #: dpkg.cfg.5:22
 msgid "B<dpkg>(1)."
 msgstr "B<dpkg>(1)."
-
