--- a/man/pl/dselect.1.pl.po
+++ b/man/pl/dselect.1.pl.po
@@ -2,15 +2,16 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr "Project-Id-Version: dpkg 1.13.16\n"
+msgstr ""
+"Project-Id-Version: dpkg 1.13.16\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
 "PO-Revision-Date: 2006-03-01 23:54+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"Content-Type: text/plain; charset=ISO-8859-2\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 # type: SS
 #: dselect.1:1
@@ -171,9 +172,9 @@ msgid ""
 "files are located. This defaults to I</var/lib/dpkg> and normally there "
 "shouldn't be any need to change it."
 msgstr ""
-"Zmienia katalog zawieraj±cy pliki `I<status>' ,`I<available>' i inne potrzebne "
-"programowi B<dpkg>. Domy¶lnym katalogiem jest I</var/lib/dpkg> i zazwyczaj "
-"nie powinno byæ potrzeby zmieniania go na inny."
+"Zmienia katalog zawieraj±cy pliki `I<status>' ,`I<available>' i inne "
+"potrzebne programowi B<dpkg>. Domy¶lnym katalogiem jest I</var/lib/dpkg> i "
+"zazwyczaj nie powinno byæ potrzeby zmieniania go na inny."
 
 # type: TP
 #: dselect.1:57
@@ -529,8 +530,8 @@ msgid ""
 "Details of the update action depend on the access method's implementation.  "
 "Normally the process is straightforward and requires no user interaction."
 msgstr ""
-"Szczegó³y aktualizacji zale¿± od implementacji metody dostêpu. Zazwyczaj "
-"ten proces jest bardzo prosty i nie wymaga interakcji z u¿ytkownikiem."
+"Szczegó³y aktualizacji zale¿± od implementacji metody dostêpu. Zazwyczaj ten "
+"proces jest bardzo prosty i nie wymaga interakcji z u¿ytkownikiem."
 
 # type: SS
 #: dselect.1:161
@@ -649,11 +650,11 @@ msgid ""
 "in the package. Some packages make use of the B<debconf>(1)  library, "
 "allowing for more flexible or even automated installation setups."
 msgstr ""
-"Szczegó³y dotycz±ce akcji instalacji zale¿± od implementacji metody "
-"dostêpu. Podczas instalacji, konfiguracji czy usuwania pakietów mo¿e byæ "
-"potrzebna interakcja z u¿ytkownikiem. Zale¿y to od skryptów opiekuna "
-"pakietu. Niektóre pakiety u¿ywaj± biblioteki B<debconf>(1), co pozwala na "
-"bardziej elastyczn± lub nawet w pe³ni automatyczn± instalacjê pakietu."
+"Szczegó³y dotycz±ce akcji instalacji zale¿± od implementacji metody dostêpu. "
+"Podczas instalacji, konfiguracji czy usuwania pakietów mo¿e byæ potrzebna "
+"interakcja z u¿ytkownikiem. Zale¿y to od skryptów opiekuna pakietu. Niektóre "
+"pakiety u¿ywaj± biblioteki B<debconf>(1), co pozwala na bardziej elastyczn± "
+"lub nawet w pe³ni automatyczn± instalacjê pakietu."
 
 # type: SS
 #: dselect.1:204
@@ -735,8 +736,8 @@ msgstr ""
 "jest on tylko instrumentem s³u¿±cym do tego i nie mo¿e w wystarczaj±cym "
 "stopniu zast±piæ umiejêtno¶ci i wiedzy administratora. U¿ytkownik powinien "
 "byæ zaznajomiony z koncepcjami le¿±cymi u podstaw systemu pakietów Debiana. "
-"W razie jakichkolwiek w±tpliwo¶ci, nale¿y je sprawdziæ w podrêczniku B<dpkg>(1) "
-"oraz w podrêczniku \"Zasady polityki Debiana\" zawartym w pakiecie "
+"W razie jakichkolwiek w±tpliwo¶ci, nale¿y je sprawdziæ w podrêczniku B<dpkg>"
+"(1) oraz w podrêczniku \"Zasady polityki Debiana\" zawartym w pakiecie "
 "B<debian-policy>."
 
 # type: Plain text
@@ -859,11 +860,11 @@ msgid ""
 msgstr ""
 "Dla ka¿dego pakietu pokazane s±: jego stan, priorytet, sekcja, numer wersji "
 "zainstalowanej i numer wersji dostêpnej, nazwa pakietu oraz krótki opis - "
-"wszystko w jednej linii. Naciskaj±c klawisz B<'V'>, mo¿na w³±czaæ i "
-"wy³±czaæ wy¶wietlanie informacji o numerze zainstalowanej i dostêpnej wersji "
-"pakietu. Naci¶niêcie klawisz B<'v'> powoduje prze³±czanie pomiêdzy "
-"wy¶wietlaniem rozwlek³ego i skróconego opisu stanu pakietu. Skrócony opis "
-"stanu jest wy¶wietlany domy¶lnie."
+"wszystko w jednej linii. Naciskaj±c klawisz B<'V'>, mo¿na w³±czaæ i wy³±czaæ "
+"wy¶wietlanie informacji o numerze zainstalowanej i dostêpnej wersji pakietu. "
+"Naci¶niêcie klawisz B<'v'> powoduje prze³±czanie pomiêdzy wy¶wietlaniem "
+"rozwlek³ego i skróconego opisu stanu pakietu. Skrócony opis stanu jest "
+"wy¶wietlany domy¶lnie."
 
 # type: Plain text
 #
@@ -876,9 +877,9 @@ msgid ""
 msgstr ""
 "Na skrócony opis stanu pakietu sk³adaj± siê cztery czê¶ci: flaga b³êdu, "
 "która normalnie powinna byæ czysta, obecny stan zainstalowania pakietu, "
-"poprzedni stan wyboru pakietu oraz obecny stan wyboru pakietu. Dwie "
-"pierwsze czê¶ci s± zwi±zane z obecnym stanem pakietu, kolejne dwie - "
-"zwi±zane z wyborami dokonanymi przez u¿ytkownika."
+"poprzedni stan wyboru pakietu oraz obecny stan wyboru pakietu. Dwie pierwsze "
+"czê¶ci s± zwi±zane z obecnym stanem pakietu, kolejne dwie - zwi±zane z "
+"wyborami dokonanymi przez u¿ytkownika."
 
 # type: Plain text
 #: dselect.1:304
@@ -998,9 +999,9 @@ msgstr ""
 "przyciskaj±c B<'/'> i wpisuj±c tekst wyszukiwania, który jest interpretowany "
 "jako wyra¿enie regularne B<regex>(7). Dodanie B<'/d'> do ³añcucha "
 "wyszukiwania, spowoduje przeszukiwanie równie¿ opisów. Dodanie B<'/i'> "
-"spowoduje ignorowanie wielko¶ci znaków podczas wyszukiwania. Mo¿na ³±czyæ "
-"te sufiksy, na przyk³ad tak: B<'/id'>. Powtórne wyszukiwanie nastêpuje "
-"przez wielokrotne naciskanie klawiszy B<'n'> lub B<'\\e'>, a¿ do znalezienia "
+"spowoduje ignorowanie wielko¶ci znaków podczas wyszukiwania. Mo¿na ³±czyæ te "
+"sufiksy, na przyk³ad tak: B<'/id'>. Powtórne wyszukiwanie nastêpuje przez "
+"wielokrotne naciskanie klawiszy B<'n'> lub B<'\\e'>, a¿ do znalezienia "
 "poszukiwanego pakietu. Po osi±gniêciu koñca listy, poszukiwanie jest "
 "kontynuowane od pocz±tku listy."
 
@@ -1305,4 +1306,3 @@ msgid ""
 msgstr ""
 "Podrêcznik napisali Juho Vuori E<lt>javuori@cc.helsinki.fiE<gt>, Josip Rodin "
 "i Joost kooij."
-
