--- a/man/ru/dpkg-checkbuilddeps.1.ru.po
+++ b/man/ru/dpkg-checkbuilddeps.1.ru.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-28  1:40+0200\n"
+"POT-Creation-Date: 2006-05-11 23:08-0500\n"
 "PO-Revision-Date: 2006-04-08 17:38+0300\n"
 "Last-Translator: Yuri Kozlov <kozlov.y@gmail.com>\n"
 "Language-Team: Russian <debian-l10n-russian@lists.debian.org>\n"
@@ -35,8 +35,8 @@ msgstr "Проект Debian"
 
 # type: TH
 #: dpkg-checkbuilddeps.1:1
-#, no-wrap
-msgid "dpkg utililties"
+#, fuzzy, no-wrap
+msgid "dpkg utilities"
 msgstr "утилиты dpkg"
 
 # type: SH
@@ -76,8 +76,8 @@ msgid ""
 msgstr ""
 "Эта программа проверяет установленные в системе пакеты на предмет сборочных "
 "зависимостей и конфликтов, описанных в файле control. Если какие-то из этих "
-"зависимостей или конфликтов не удовлетворены, то об этом сообщается и "
-"работа завершается с ненулевым кодом возврата."
+"зависимостей или конфликтов не удовлетворены, то об этом сообщается и работа "
+"завершается с ненулевым кодом возврата."
 
 # type: Plain text
 #: dpkg-checkbuilddeps.1:15
@@ -138,6 +138,5 @@ msgid ""
 "for copying conditions. There is NO warranty."
 msgstr ""
 "Это свободная программа; смотрите Универсальную Общественную Лицензии GNU "
-"версии 2 или более позднюю, где изложены условия распространения. "
-"НИКАКИХ гарантий."
-
+"версии 2 или более позднюю, где изложены условия распространения. НИКАКИХ "
+"гарантий."
