--- a/man/C/po/deb-control.5.pot
+++ b/man/C/po/deb-control.5.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-02-28  1:40+0200\n"
+"POT-Creation-Date: 2006-05-11 23:08-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15,32 +15,24 @@ msgstr ""
 "Content-Transfer-Encoding: ENCODING\n"
 
 # type: TH
-#.  Author: Raul Miller
-#.  Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
 #: deb-control.5:3
 #, no-wrap
 msgid "deb-control"
 msgstr ""
 
 # type: TH
-#.  Author: Raul Miller
-#.  Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
 #: deb-control.5:3
 #, no-wrap
 msgid "2006-02-28"
 msgstr ""
 
 # type: TH
-#.  Author: Raul Miller
-#.  Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
 #: deb-control.5:3
 #, no-wrap
 msgid "Debian Project"
 msgstr ""
 
 # type: TH
-#.  Author: Raul Miller
-#.  Includes text from the debian Guidelines by Ian Jackson, Ian Murdock
 #: deb-control.5:3
 #, no-wrap
 msgid "Debian"
@@ -117,7 +109,7 @@ msgid ""
 "Typically, this is the original package's version number in whatever form "
 "the program's author uses. It may also include a Debian revision number (for "
 "non-native packages). If both version and revision are supplied, they are "
-"seperated by a hyphen, `-'. For this reason, the original version may not "
+"separated by a hyphen, `-'. For this reason, the original version may not "
 "have a hyphen in its version number."
 msgstr ""
 
@@ -152,7 +144,7 @@ msgid ""
 "The format for the package description is a short brief summary on the first "
 "line (after the \"Description\" field). The following lines can be used as a "
 "longer, more detailed description. Each line of the long description must be "
-"preceded by a space, and blank lines in the long desription must contain a "
+"preceded by a space, and blank lines in the long description must contain a "
 "single '.' following the preceding space."
 msgstr ""
 
@@ -365,7 +357,7 @@ msgid ""
 "used in the case of several packages all providing the same service.  For "
 "example, sendmail and exim can serve as a mail server, so they provide a "
 "common package (`mail-transport-agent') on which other packages can depend. "
-"This will allow sendmail or exim to serve as a valid option to satisy the "
+"This will allow sendmail or exim to serve as a valid option to satisfy the "
 "dependency. This prevents the packages that depend on a mail server from "
 "having to know the package names for all of them, and using `|' to separate "
 "the list."
