--- a/man/C/po/dpkg-name.1.pot
+++ b/man/C/po/dpkg-name.1.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-02-28  1:40+0200\n"
+"POT-Creation-Date: 2006-05-11 23:08-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -15,40 +15,24 @@ msgstr ""
 "Content-Transfer-Encoding: ENCODING\n"
 
 # type: TH
-#.  This is an -*- nroff -*- source file.
-#.  dpkg-name and this manpage are Copyright 1995,1996 by Erick Branderhorst.
-#.  This is free software; see the GNU General Public Licence version 2
-#.  or later for copying conditions.  There is NO warranty.
 #: dpkg-name.1:6
 #, no-wrap
 msgid "dpkg-name"
 msgstr ""
 
 # type: TH
-#.  This is an -*- nroff -*- source file.
-#.  dpkg-name and this manpage are Copyright 1995,1996 by Erick Branderhorst.
-#.  This is free software; see the GNU General Public Licence version 2
-#.  or later for copying conditions.  There is NO warranty.
 #: dpkg-name.1:6
 #, no-wrap
 msgid "2006-02-28"
 msgstr ""
 
 # type: TH
-#.  This is an -*- nroff -*- source file.
-#.  dpkg-name and this manpage are Copyright 1995,1996 by Erick Branderhorst.
-#.  This is free software; see the GNU General Public Licence version 2
-#.  or later for copying conditions.  There is NO warranty.
 #: dpkg-name.1:6
 #, no-wrap
 msgid "Debian Project"
 msgstr ""
 
 # type: TH
-#.  This is an -*- nroff -*- source file.
-#.  dpkg-name and this manpage are Copyright 1995,1996 by Erick Branderhorst.
-#.  This is free software; see the GNU General Public Licence version 2
-#.  or later for copying conditions.  There is NO warranty.
 #: dpkg-name.1:6
 #, no-wrap
 msgid "dpkg utilities"
@@ -148,7 +132,7 @@ msgstr ""
 #: dpkg-name.1:56
 msgid ""
 "Files will be moved into subdir. If directory given as argument exists the "
-"files will be moved into that direcotory otherswise the name of the target "
+"files will be moved into that directory otherwise the name of the target "
 "directory is extracted from the section field in the control part of the "
 "package. The target directory will be `unstable/binary-"
 "E<lt>architectureE<gt>/E<lt>sectionE<gt>'. If the section is `non-free', "
