--- a/man/C/po/dpkg-statoverride.8.pot
+++ b/man/C/po/dpkg-statoverride.8.pot
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2006-02-28  1:40+0200\n"
+"POT-Creation-Date: 2006-05-11 23:08-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -23,7 +23,7 @@ msgstr ""
 # type: TH
 #: dpkg-statoverride.8:1
 #, no-wrap
-msgid "2006-02-28"
+msgid "2006-05-04"
 msgstr ""
 
 # type: TH
