--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,8 @@
+2006-05-11  Frank Lichtenheld  <djpig@debian.org>
+
+	* C/po/*.pot: Update.
+	* */*.po: Merge with .pot files.
+
 2006-05-10  Frank Lichtenheld  <djpig@debian.org>
 
 	* C/dpkg-deb.1: Mention the --show-format option also
