--- a/man/ja/dpkg-name.1.ja.po
+++ b/man/ja/dpkg-name.1.ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-28  1:40+0200\n"
+"POT-Creation-Date: 2006-05-11 23:08-0500\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
@@ -14,40 +14,24 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 
 # type: TH
-#.  This is an -*- nroff -*- source file.
-#.  dpkg-name and this manpage are Copyright 1995,1996 by Erick Branderhorst.
-#.  This is free software; see the GNU General Public Licence version 2
-#.  or later for copying conditions.  There is NO warranty.
 #: dpkg-name.1:6
 #, fuzzy, no-wrap
 msgid "dpkg-name"
 msgstr "dpkg-name"
 
 # type: TH
-#.  This is an -*- nroff -*- source file.
-#.  dpkg-name and this manpage are Copyright 1995,1996 by Erick Branderhorst.
-#.  This is free software; see the GNU General Public Licence version 2
-#.  or later for copying conditions.  There is NO warranty.
 #: dpkg-name.1:6
 #, no-wrap
 msgid "2006-02-28"
 msgstr ""
 
 # type: TH
-#.  This is an -*- nroff -*- source file.
-#.  dpkg-name and this manpage are Copyright 1995,1996 by Erick Branderhorst.
-#.  This is free software; see the GNU General Public Licence version 2
-#.  or later for copying conditions.  There is NO warranty.
 #: dpkg-name.1:6
 #, fuzzy, no-wrap
 msgid "Debian Project"
 msgstr "Debian Project"
 
 # type: TH
-#.  This is an -*- nroff -*- source file.
-#.  dpkg-name and this manpage are Copyright 1995,1996 by Erick Branderhorst.
-#.  This is free software; see the GNU General Public Licence version 2
-#.  or later for copying conditions.  There is NO warranty.
 #: dpkg-name.1:6
 #, fuzzy, no-wrap
 msgid "dpkg utilities"
@@ -164,7 +148,7 @@ msgstr "B<-s, --subdir [dir]>"
 #, fuzzy
 msgid ""
 "Files will be moved into subdir. If directory given as argument exists the "
-"files will be moved into that direcotory otherswise the name of the target "
+"files will be moved into that directory otherwise the name of the target "
 "directory is extracted from the section field in the control part of the "
 "package. The target directory will be `unstable/binary-"
 "E<lt>architectureE<gt>/E<lt>sectionE<gt>'. If the section is `non-free', "
