--- a/man/ja/dpkg-statoverride.8.ja.po
+++ b/man/ja/dpkg-statoverride.8.ja.po
@@ -5,7 +5,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: dpkg man pages\n"
-"POT-Creation-Date: 2006-02-28  1:40+0200\n"
+"POT-Creation-Date: 2006-05-11 23:08-0500\n"
 "PO-Revision-Date: 2005-07-03 15:04+0200\n"
 "Last-Translator: Unknown translator\n"
 "Language-Team: Japanese <debian-l10n-japanese@lists.debian.org>\n"
@@ -22,7 +22,7 @@ msgstr "I</var/lib/dpkg/statoverride>"
 # type: TH
 #: dpkg-statoverride.8:1
 #, no-wrap
-msgid "2006-02-28"
+msgid "2006-05-04"
 msgstr ""
 
 # type: TH
