--- a/man/pl/822-date.1.pl.po
+++ b/man/pl/822-date.1.pl.po
@@ -2,44 +2,37 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr "Project-Id-Version: dpkg 1.13.16\n"
+msgstr ""
+"Project-Id-Version: dpkg 1.13.16\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
 "PO-Revision-Date: 2006-03-01 23:15+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"Content-Type: text/plain; charset=ISO-8859-2\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 # type: Plain text
 #
-#.  Hey, Emacs!  This is an -*- nroff -*- source file.
-#.  Authors: Ian Jackson
 #: 822-date.1:3
 #, no-wrap
 msgid "822-date"
 msgstr "822-date"
 
 # type: TH
-#.  Hey, Emacs!  This is an -*- nroff -*- source file.
-#.  Authors: Ian Jackson
 #: 822-date.1:3
 #, no-wrap
 msgid "2008-02-28"
 msgstr "2008-02-28"
 
 # type: TH
-#.  Hey, Emacs!  This is an -*- nroff -*- source file.
-#.  Authors: Ian Jackson
 #: 822-date.1:3
 #, no-wrap
 msgid "Debian Project"
 msgstr "Projekt Debiana"
 
 # type: TH
-#.  Hey, Emacs!  This is an -*- nroff -*- source file.
-#.  Authors: Ian Jackson
 #: 822-date.1:3
 #, no-wrap
 msgid "dpkg utilities"
@@ -153,4 +146,3 @@ msgid ""
 msgstr ""
 "B<822-date> oraz ten podrêcznik napisa³ Ian Jackson i udostêpni³ jako public "
 "domain."
-
