--- a/man/pl/dpkg-split.1.pl.po
+++ b/man/pl/dpkg-split.1.pl.po
@@ -2,39 +2,36 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr "Project-Id-Version: dpkg 1.13.16\n"
-"POT-Creation-Date: 2006-02-28  1:40+0200\n"
+msgstr ""
+"Project-Id-Version: dpkg 1.13.16\n"
+"POT-Creation-Date: 2006-05-11 23:08-0500\n"
 "PO-Revision-Date: 2006-03-01 23:13+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"Content-Type: text/plain; charset=ISO-8859-2\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 # type: TH
-#.  Authors: Ian Jackson
 #: dpkg-split.1:2
 #, no-wrap
 msgid "dpkg-split"
 msgstr "dpkg-split"
 
 # type: TH
-#.  Authors: Ian Jackson
 #: dpkg-split.1:2
 #, no-wrap
 msgid "2006-02-28"
 msgstr "2006-02-28"
 
 # type: TH
-#.  Authors: Ian Jackson
 #: dpkg-split.1:2
 #, no-wrap
 msgid "Debian Project"
 msgstr "Projekt Debiana"
 
 # type: TH
-#.  Authors: Ian Jackson
 #: dpkg-split.1:2
 #, no-wrap
 msgid "dpkg utilities"
@@ -321,9 +318,9 @@ msgid ""
 "this were not mandatory the calling program would not know what output file "
 "to expect.)"
 msgstr ""
-"Opcja B<--output> lub B<-o> musi zostaæ podana w przypadku u¿ycia B<--"
-"auto>. (W przeciwnym razie program nie wiedzia³by, jakiego spodziewaæ siê "
-"pliku wyj¶ciowego.)"
+"Opcja B<--output> lub B<-o> musi zostaæ podana w przypadku u¿ycia B<--auto>. "
+"(W przeciwnym razie program nie wiedzia³by, jakiego spodziewaæ siê pliku "
+"wyj¶ciowego.)"
 
 # type: TP
 #: dpkg-split.1:127
@@ -449,8 +446,8 @@ msgid ""
 "Specifies the maximum part size when splitting, in kilobytes (1024 bytes). "
 "The default is 450Kb."
 msgstr ""
-"Okre¶lenie maksymalnego rozmiaru czê¶ci pakietu w kilobajtach (1024 "
-"bajtów). Warto¶ci± domy¶ln± jest 450kB."
+"Okre¶lenie maksymalnego rozmiaru czê¶ci pakietu w kilobajtach (1024 bajtów). "
+"Warto¶ci± domy¶ln± jest 450kB."
 
 # type: TP
 #: dpkg-split.1:170
@@ -680,4 +677,3 @@ msgstr ""
 "1996 i udostêpni³ na Powszechnej Licencji Publicznej GNU; BEZ JAKIEJKOLWIEK "
 "GWARANCJI. Szczegó³y w I</usr/share/doc/dpkg/copyright> oraz I</usr/share/"
 "common-licences/GPL>."
-
