--- a/man/pl/start-stop-daemon.8.pl.po
+++ b/man/pl/start-stop-daemon.8.pl.po
@@ -2,15 +2,16 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr "Project-Id-Version: dpkg 1.13.16\n"
+msgstr ""
+"Project-Id-Version: dpkg 1.13.16\n"
 "POT-Creation-Date: 2006-02-28  1:40+0200\n"
 "PO-Revision-Date: 2006-03-01 23:37+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"Content-Type: text/plain; charset=ISO-8859-2\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 # type: Plain text
 #
@@ -112,9 +113,9 @@ msgid ""
 "program being started."
 msgstr ""
 "Operacja B<--start> wymaga, aby B<start-stop-daemon> sprawdzi³, czy dany "
-"proces jest ju¿ uruchomiony. Je¶li proces ju¿ istnieje, B<start-stop-"
-"daemon> nie wykonuje ¿adnych czynno¶ci i koñczy siê, zwracaj±c kod b³êdu 1 "
-"(lub 0, je¶li podano opcjê B<--oknodo>). Je¶li dany proces nie jest jeszcze "
+"proces jest ju¿ uruchomiony. Je¶li proces ju¿ istnieje, B<start-stop-daemon> "
+"nie wykonuje ¿adnych czynno¶ci i koñczy siê, zwracaj±c kod b³êdu 1 (lub 0, "
+"je¶li podano opcjê B<--oknodo>). Je¶li dany proces nie jest jeszcze "
 "uruchomiony, to wykonywany jest program okre¶lony opcj± B<--exec> (lub, "
 "je¶li podano, opcj± B<--startas>). Wszelkie argumenty podane tu¿ po opcji "
 "B<--> s± przekazywane do wykonywanego polecenia."
@@ -395,10 +396,9 @@ msgstr ""
 "grupê poprzez do³±czenie B<:> wraz z nazw± grupy b±d¼ numerem gid, podobnie "
 "jak w poleceniu `chown' (I<u¿ytkownik>B<:>I<grupa>). Podczas korzystania z "
 "tej opcji nale¿y pamiêtaæ, ¿e grupa g³ówna i poboczne zostan± ustawione, "
-"nawet gdy nie podano opcji B<--group>. Opcja B<--group> jest przydatna "
-"tylko dla grup, których podany u¿ytkownik nie jest cz³onkiem (na przyk³ad "
-"przy dodawaniu procesowi cz³onkostwa grupy dla takich u¿ytkowników jak "
-"B<nobody>)."
+"nawet gdy nie podano opcji B<--group>. Opcja B<--group> jest przydatna tylko "
+"dla grup, których podany u¿ytkownik nie jest cz³onkiem (na przyk³ad przy "
+"dodawaniu procesowi cz³onkostwa grupy dla takich u¿ytkowników jak B<nobody>)."
 
 # type: TP
 #: start-stop-daemon.8:201
@@ -414,8 +414,8 @@ msgid ""
 "the pidfile is also written after the chroot."
 msgstr ""
 "Zmienia katalog bie¿±cy na I<root> i czyni go g³ównym katalogiem (rootem) "
-"przed wystartowaniem procesu. Proszê zauwa¿yæ, ¿e plik pidfile jest "
-"tworzony po wykonaniu chroot."
+"przed wystartowaniem procesu. Proszê zauwa¿yæ, ¿e plik pidfile jest tworzony "
+"po wykonaniu chroot."
 
 # type: TP
 #: start-stop-daemon.8:207
@@ -563,4 +563,3 @@ msgid ""
 msgstr ""
 "Podrêcznik napisa³ Klee Dienes E<lt>klee@mit.eduE<gt>, a poprawi³ Ian "
 "Jackson."
-
