--- a/man/pl/update-alternatives.8.pl.po
+++ b/man/pl/update-alternatives.8.pl.po
@@ -2,63 +2,36 @@
 # This file is distributed under the same license as the dpkg package.
 #
 msgid ""
-msgstr "Project-Id-Version: dpkg 1.13.16\n"
-"POT-Creation-Date: 2006-02-28  1:40+0200\n"
+msgstr ""
+"Project-Id-Version: dpkg 1.13.16\n"
+"POT-Creation-Date: 2006-05-11 23:08-0500\n"
 "PO-Revision-Date: 2006-03-01 23:34+0100\n"
 "Last-Translator: Robert Luberda <robert@debian.org>\n"
 "Language-Team: Polish <debian-l10n-polish@lists.debian.org>\n"
-"Content-Type: text/plain; charset=ISO-8859-2\n"
-"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=ISO-8859-2\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 # type: Plain text
-#.  update\-alternatives.8
-#.  This man page is copyright 1997 Charles Briscoe-Smith
-#.  This is free documentation; you can redistribute it and/or modify
-#.  it under the terms of the GNU General Public License as published
-#.  by the Free Software Foundation; either version 2 of the License, or
-#.  (at your option) any later version.  There is NO WARRANTY.  You can
-#.  find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
 #: update-alternatives.8:8
 #, no-wrap
 msgid "update-alternatives"
 msgstr "update-alternatives"
 
 # type: TH
-#.  update\-alternatives.8
-#.  This man page is copyright 1997 Charles Briscoe-Smith
-#.  This is free documentation; you can redistribute it and/or modify
-#.  it under the terms of the GNU General Public License as published
-#.  by the Free Software Foundation; either version 2 of the License, or
-#.  (at your option) any later version.  There is NO WARRANTY.  You can
-#.  find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
 #: update-alternatives.8:8
 #, no-wrap
 msgid "2006-02-28"
 msgstr "2006-02-28"
 
 # type: TH
-#.  update\-alternatives.8
-#.  This man page is copyright 1997 Charles Briscoe-Smith
-#.  This is free documentation; you can redistribute it and/or modify
-#.  it under the terms of the GNU General Public License as published
-#.  by the Free Software Foundation; either version 2 of the License, or
-#.  (at your option) any later version.  There is NO WARRANTY.  You can
-#.  find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
 #: update-alternatives.8:8
 #, no-wrap
 msgid "Debian Project"
 msgstr "Projekt Debiana"
 
 # type: TH
-#.  update\-alternatives.8
-#.  This man page is copyright 1997 Charles Briscoe-Smith
-#.  This is free documentation; you can redistribute it and/or modify
-#.  it under the terms of the GNU General Public License as published
-#.  by the Free Software Foundation; either version 2 of the License, or
-#.  (at your option) any later version.  There is NO WARRANTY.  You can
-#.  find the GNU GPL in /usr/share/common-licenses/GPL on any Debian system.
 #: update-alternatives.8:8
 #, no-wrap
 msgid "dpkg utilities"
@@ -145,8 +118,8 @@ msgid ""
 "B<update-alternatives> creates, removes, maintains and displays information "
 "about the symbolic links comprising the Debian alternatives system."
 msgstr ""
-"B<update-alternatives> tworzy, usuwa, wy¶wietla oraz zarz±dza informacjami "
-"o linkach symbolicznych sk³adaj±cych siê na system alternatyw Debiana."
+"B<update-alternatives> tworzy, usuwa, wy¶wietla oraz zarz±dza informacjami o "
+"linkach symbolicznych sk³adaj±cych siê na system alternatyw Debiana."
 
 # type: Plain text
 #: update-alternatives.8:72
@@ -394,8 +367,8 @@ msgid ""
 "A directory, by default I</var/lib/dpkg/alternatives>, containing B<update-"
 "alternatives>' state information."
 msgstr ""
-"Katalog zawieraj±cy informacje o stanie B<update-alternatives>, domy¶lnie "
-"I</var/lib/dpkg/alternatives>."
+"Katalog zawieraj±cy informacje o stanie B<update-alternatives>, domy¶lnie I</"
+"var/lib/dpkg/alternatives>."
 
 # type: TP
 #: update-alternatives.8:213
@@ -994,4 +967,3 @@ msgstr "ZOBACZ TAK¯E"
 #: update-alternatives.8:460
 msgid "B<ln>(1), FHS, the Filesystem Hierarchy Standard."
 msgstr "B<ln>(1), FHS - standard hierarchii systemu plików."
-
