--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 dpkg (1.13.20~) UNRELEASED; urgency=low
 
   [ Frank Lichtenheld ]
+  * Add gettext support for the Perl scripts. Based on a patch by
+    Nicolas François. Closes: #165843
+  * Only print usage information of dpkg-scanpackages on stdout
+    if requested explicetly. Use stderr in case of error.
+    Closes: #366659
   * Add remarks to dpkg-scansources and dpkg-scanpackages
     man pages about the need to compress the generated files
     to be able to access them via apt. Closes: #65839
