Fix --ignore-depends argument value parsing. Closes: #169125

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2006-05-12  Frank Lichtenheld  <djpig@debian.org>
 
+	* src/main.c (ignoredepends): Fix parsing of the
+	--ignore-depends argument value.
+
 	* dpkg-deb/info.c (info_spew): Prepend the name of the
 	directory we're in to the control component name. This
 	way we don't spew out garbage if we get an absolute
