--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ dpkg (1.13.20~) UNRELEASED; urgency=low
   * Don't spew out garbage from dpkg-deb, if the second argument
     to -I is a absolute filename. Based on a patch by Ian Eure.
     Closes: #35573
+  * Fix --ignore-depends argument value parsing. Closes: #169125
 
   [ Nicolas François ]
   * fix typos in the Russian man pages. Thanks to Stepan Golosunov.
